date binding in movies and seances

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -26,7 +26,7 @@
                             <li><a th:href="@{/admin/cinema}">Cinemas</a></li>
                             <li><a th:href="@{/admin/cinemaRoom}">Cinemas Rooms</a></li>
                             <li><a th:href="@{/admin/movie}">Movies</a></li>
-                            <li><a href="">Seances</a></li>
+                            <li><a th:href="@{/admin/seance}">Seances</a></li>
                             <li><a href="">Seats</a></li>
                             <li><a href="">Users</a></li>
                         </ul>
