--- a/src/main/resources/templates/admin_cities.html
+++ b/src/main/resources/templates/admin_cities.html
@@ -23,7 +23,7 @@
 
                         <div class="movie-item-style-2">
                             <div class="mv-item-infor">
-                                <h6><span th:text="${city.getName()}"></span> (ID: <span th:text="${city.getId()}"></span>)</span></h6>-->
+                                <h6><span th:text="${city.getName()}"></span> (ID: <span th:text="${city.getId()}"></span>)</span></h6>
                                 <!-- admin/cinema/delete/id -->
                                 <p> EDIT |
                                     <a href="admin_cities.html" th:href="@{/admin/city/delete/{cityId}(cityId=${city.getId()})}">Delete</a>
