--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -25,13 +25,11 @@
                                            th:field="*{surname}" th:placeholder="${user.getSurname()}"></p>
                         <p>E-mail: <input type="text" name="email" pattern="([A-Za-z0-9]\.?)+@[A-Za-z0-9]+\.[a-z]+"
                                           required th:field="*{email}" th:placeholder="${user.getEmail()}"></p>
-                        <!--<p>New Password: <input type="password" name="password" required="required" th:field="*{password}"> </p>
-                         <p>Repeat new password: <input type="password" name="repeatedPassword" required="required" th:field="*{password}"> </p> -->
                         <p>Password: <input type="password" name="password" th:field="*{newPassword}"></p>
                         <p>Username: (cannot be changed for the security reasons)
                             <input type="text" name="username" required th:field="*{username}"
                                    th:placeholder="${user.getUsername()}" readonly></p>
-                        <input type="hidden name="role" th:field="*{role}">
+                        <input type="hidden" name="role" th:field="*{role}">
                         <input type="hidden" name="id" th:field="*{id}">
                         <input type="hidden" name="old_password" th:value="${user.getPassword()}" th:field="*{password}">
                         <p><input th:href="index.html" type="submit" value="Edit profile"></p>
