--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -19,10 +19,10 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="form-style-1 user-information">
                     <form th:action="@{/register}" method="post">
-                        <p>Name: <input type="text" name="name" pattern="[A-Z][a-z]+" required="required"> </p>
-                        <p>Surname: <input type="text" name="surname" pattern="[A-Z][a-z]+" required="required"> </p>
+                        <p>Name: <input type="text" name="name" pattern="[A-Z][a-z]+" required="required" title="Should starts with uppercase"> </p>
+                        <p>Surname: <input type="text" name="surname" pattern="[A-Z][a-z]+" required="required" title="Should starts with uppercase"> </p>
                         <p>Username: <input type="text" name="username" required="required"> </p>
-                        <p>E-mail: <input type="text" name="email" pattern="([A-Za-z0-9]\.?)+@[A-Za-z0-9]+\.[a-z]+" required="required"> </p>
+                        <p>E-mail: <input type="text" name="email" pattern="([A-Za-z0-9]\.?)+@[A-Za-z0-9]+\.[a-z]+" required="required" title="xxx@yyy.zzz"> </p>
                         <p>Password: <input type="password" name="password" required="required"> </p>
                         <p>Repeat password: <input type="password" name="repeatedPassword" required="required"> </p>
                         <button type="submit">Register</button>
