--- a/src/main/resources/templates/admin_cities.html
+++ b/src/main/resources/templates/admin_cities.html
@@ -20,12 +20,10 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="form-style-1 user-information">
                     <tr th:each="city: ${cities}">
-
                         <div class="movie-item-style-2">
                             <div class="mv-item-infor">
-                                <h6><span th:text="${city.getName()}"></span> (ID: <span th:text="${city.getId()}"></span>)</span></h6>
-                                <!-- admin/cinema/delete/id -->
-                                <p> EDIT |
+                                <h6><span th:text="${city.getName()}"></span> (ID: <span th:text="${city.getId()}"></span>)</h6>
+                                <p> <a href="admin_city_edit.html" th:href="@{/admin/city/edit/{cityId}(cityId=${city.getId()})}">Edit</a> |
                                     <a href="admin_cities.html" th:href="@{/admin/city/delete/{cityId}(cityId=${city.getId()})}">Delete</a>
                                 </p>
                             </div>
@@ -34,10 +32,8 @@
                     <form th:action="@{city/add}" th:object="${newCity}" method="post">
                         <p>Add a new city: <input type="text" th:field="*{name}" placeholder="Enter name of new city"></p>
                         <p> <input th:href="admin_cities.html" type="submit" value="Add new city"></p>
-
                     </form>
                 </div>
-
             </div>
         </div>
     </div>
