adding movie form with reqiuired fields

--- a/src/main/resources/templates/admin_movies.html
+++ b/src/main/resources/templates/admin_movies.html
@@ -39,17 +39,17 @@
                 </tr>
                 <form th:action="@{movie/add}" th:object="${newMovie}" method="post">
                     <p>Add a new Cinema: <input type="text" th:field="*{title}"
-                                                placeholder="Enter title"></p>
+                                                placeholder="Enter title" required></p>
                     <p>Genre:
-                    <select class="form-control" id="testOrder"  th:field="*{genre}"  name="testOrder" >
+                    <select class="form-control" id="testOrder"  th:field="*{genre}"  name="testOrder"  required>
                         <option value="">Select movie genre</option>
                         <option th:each="genres : ${getAllGenres}"
                                 th:text="${genres.toString()}"
                                 th:value="${genres.toString()}"></option>
                     </select></p>
-                    <p>Description: <input type="text"  th:field="*{description}" placeholder="Enter description"></p>
-                    <p>Start date: <input type="datetime-local"  th:field="*{dateFrom}" placeholder="Enter start date"></p>
-                    <p>Stop date: <input type="datetime-local" th:field="*{dateTo}" placeholder="Enter start date"></p>
+                    <p>Description: <input type="text"  th:field="*{description}" placeholder="Enter description" required></p>
+                    <p>Start date: <input type="datetime-local"  th:field="*{dateFrom}" placeholder="Enter start date" required></p>
+                    <p>Stop date: <input type="datetime-local" th:field="*{dateTo}" placeholder="Enter start date" required></p>
                     <p><input th:href="admin_cinemas.html" type="submit" value="Add new movie"></p>
                 </form>
                 </div>
