--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -38,7 +38,7 @@
                 </div>
             </nav>
             <div class="top-search">
-                <input type="text" placeholder="Search for a movie, TV Show or celebrity that you are looking for">
+                <input type="text" placeholder="Search for a seance, movie that you are looking for">
             </div>
         </div>
     </header>
