--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -7,11 +7,12 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="hero-ct">
-                    <h1>Seances</h1>
+                    <h1>Seances found for phrase '<span th:text="${phrase}"></span>' </h1>
                 </div>
             </div>
         </div>
     </div>
+
 </div>
 <div class="page-single movie_list">
     <div class="container">
