admin users Get + delete

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -28,7 +28,7 @@
                             <li><a th:href="@{/admin/movie}">Movies</a></li>
                             <li><a th:href="@{/admin/seance}">Seances</a></li>
                             <li><a href="">Seats</a></li>
-                            <li><a href="">Users</a></li>
+                            <li><a th:href="@{/admin/user}">Users</a></li>
                         </ul>
                     </div>
                     <div class="user-fav">
