--- a/src/main/resources/templates/cinemaRooms.html
+++ b/src/main/resources/templates/cinemaRooms.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="hero-ct">
-                    <h1 th:text="${}"></h1>
+                   <!-- <h1 th:text="${}"></h1>-->
                 </div>
             </div>
         </div>
