--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,24 +7,19 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="hero-ct">
-                    <h1>Admin Panel</h1>
+                    <h1>Error</h1>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="page-single">
+<div class="page-single movie_list">
     <div class="container">
         <div class="row ipad-width2">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="form-style-1 user-information">
-                    <div class="movie-item-style-2">
-                        <div class="mv-item-infor">
-                            <h6><span th:text="${status}"></span></h6>
-                            <a href="/">Go back</a>
-                        </div>
-                    </div>
+                    Something went wrong!
                 </div>
             </div>
         </div>
