--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -3705,6 +3705,7 @@ h1 {
 }
 h2 {
   font-size: 28px;
+  color: #ffffff;
 }
 h3 {
   font-size: 24px;
@@ -5193,6 +5194,7 @@ ul {
   margin-bottom: 60px;
 }
 .time {
+  text-align: right;
   font-family: 'Nunito', sans-serif;
   font-size: 12px;
   color: #abb7c4;
@@ -5205,11 +5207,11 @@ ul {
   width: 100%;
 }
 .blog-item-style-1 img {
+  padding: 5px;
   margin-right: 30px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  width: 35%;
 }
 @media (max-width: 767px) {
   .blog-item-style-1 {
@@ -5341,6 +5343,7 @@ ul {
   border: 1px solid #dcf836;
 }
 .blog-it-infor h3 {
+  color: #ffffff;
   margin-bottom: 15px;
 }
 .blog-it-infor h3 a {
@@ -5624,8 +5627,8 @@ ul {
   padding-top: 50px;
 }
 .hero h1 {
-  font-family: 'Dosis', sans-serif;
-  font-size: 50px;
+  font-family:Lucida Sans Unicode;
+  font-size: 30px;
   color: #ffffff;
   font-weight: 700;
   text-transform: uppercase;
@@ -5703,7 +5706,7 @@ ul {
   }
   .user-hero .hero-ct h1 {
     margin-left: 0;
-    font-size: 40px;
+    font-size: 20px;
   }
   .user-hero .hero-ct ul {
     margin-left: 0;
