--- a/src/main/resources/templates/admin_news.html
+++ b/src/main/resources/templates/admin_news.html
@@ -40,9 +40,9 @@
                     <form th:action="@{/admin/news/add}" th:object="${news}" method="post">
                         <p>Add a news: <input type="text" th:field="*{title}"
                                                    placeholder="Enter title" required></p>
-                        <p>Description: <input type="text" th:field="*{description}" placeholder="Enter description"
+                        <p>Description: (500) <input type="text" maxlength="500" th:field="*{description}" placeholder="Enter description"
                                                required></p>
-                        <p>Content: <textarea  rows = "20" cols = "80" th:field="*{content}" placeholder="Enter news text"
+                        <p>Content: (2500) <textarea  rows = "20" cols = "80" th:field="*{content}" placeholder="Enter news text"
                                                   required></textarea></p>
                         <p>Author: <input type="text" th:field="*{author}" placeholder="Enter author"
                                                required></p>
