--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
 
                     <div class="row">
                         <div class="blog-item-style-1">
-                            <img src="../static/images/uploads/blog-it1.jpg" th:src="@{/assets/images/uploads/blog-it1.jpg}" alt="" width="120" height="190">
+                            <img src="../static/images/uploads/blog-it1.jpg" th:src="@{/assets/images/uploads/blog-it1.jpg}">
                             <div class="blog-it-infor">
                                 <h3><span th:text="${news.getTitle()}"></span> </h3>
                                 <span class="time" th:text="${news.getDate()+' by ' +news.getAuthor()}"></span>
