--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -38,8 +38,10 @@
                 </div>
             </nav>
             <div class="top-search">
+          <form action = "/search/" method = "post">
                 <input type="text" placeholder="Search for a seance, movie that you are looking for">
-            </div>
+          </form>
+          </div>
         </div>
     </header>
     </body>
